<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biruMuda"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/hijauTua"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/biruTua"
        android:text="@string/register"
        android:textColor="@android:color/black" />

</LinearLayout>
