<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biruMuda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teks1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:gravity="center"
            android:text="@string/bantuan_cara_penggunaan_aplikasi" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/biruTua"
                android:clickable="false"
                android:text="@string/menu_diagnosa"
                android:textColor="@android:color/black"  />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/btn1"
                android:layout_margin="5dp"
                android:src="@drawable/stethoscope" />

            <TextView
                android:id="@+id/teks2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/img1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/img1"
                android:gravity="center_vertical"
                android:text="@string/bantuan"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/biruTua"
                android:clickable="false"
                android:text="@string/menu_daftar_penyakit"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/btn2"
                android:layout_margin="5dp"
                android:src="@drawable/list" />

            <TextView
                android:id="@+id/teks3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/img2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/img2"
                android:gravity="center_vertical"
                android:text="@string/bantuan2"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/biruTua"
                android:clickable="false"
                android:text="@string/menu_about"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/btn4"
                android:layout_margin="5dp"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/teks5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/img4"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/img4"
                android:gravity="center_vertical"
                android:text="@string/bantuan4"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>